fix endpoints getAllEstudiantesByidProfesor y getAllProfesoresByIdEstudiante